corrigi estilos da pagina e o html

--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/form_register.css">
-  <link rel="stylesheet" href="../styles/globals.css">
-  <title>Cadastro</title>
+  <link rel="stylesheet" href="./styles/form_register.css">
+  <link rel="stylesheet" href="./styles/globals.css">
+  <title>Login</title>
 </head>
 <body>
   <div class="form_container">
-    <form action="register.php" method="post">
+    <form action="login.php" method="post">
       <fieldset>
-        <legend>Cadastro</legend>
-        <label for="name">Nome</label>
-        <div>
-          <input type="text" name="name" id="name">
-        </div>
+        <legend>Login</legend>
         <label for="name">Email</label>
         <div>
           <input type="email" name="email" id="email">
@@ -25,11 +21,10 @@
         <div>
           <input type="password" name="password" id="password">
         </div>
-        <label for="check_password">Confirme a senha</label>
         <div>
-          <input type="password" name="check_password" id="check_password">
+          <button type="submit">Logar</button>
+          <span><a href="/cadastro">Não tenho cadastro</a></span>
         </div>
-        <button type="submit">Registrar</button>
       </fieldset>
     </form>
   </div>
