cria a funcao de conexao

--- a/cadastro/index.html
+++ b/cadastro/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="form_container">
-    <form action="register.php" method="post">
+    <form action="/cadastro/register.php" method="post">
       <fieldset>
         <legend>Cadastro</legend>
         <label for="name">Nome</label>
